--- a/js/gis/dijit/property/css/property.css
+++ b/js/gis/dijit/property/css/property.css
@@ -142,6 +142,7 @@ select {
 
 .pContRes {
   display:none;
+  text-align: left;
 
 }
 
@@ -262,7 +263,8 @@ select {
 
 
 .ptabContent {
-    text-align: center ;
+    //text-align: center ;
+    text-align: left;
     font-size: 11px;
     //margin: 8px;
     margin-left: auto ;
