--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -155,18 +155,30 @@
                                                 </div>
 
                                                 <div id="pMapFrm" class="pContRes" data-dojo-attach-point="pMapFrm" data-dojo-type="dijit/layout/ContentPane" style="display:none;">
-                                                    <p>Map Search Tools Are in the works</p>
+                                                    <p>Map Search Tools Are A Work In Progress</p>
 
-                                                      <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:placePoint"  label="Select By Point" iconClass="dijitNoIcon" ></input>
+                                                      <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:modePoint"  label="Select By Point" iconClass="dijitNoIcon" ></input>
+                                                      <br><br><br>
+
+                                                      <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:modePolygon"  label="Select By Polygon" iconClass="dijitNoIcon" ></input>
                                                       <br>
 
 
+                                                      <br><br>
+
+                                                     <div style="width:58%;margin: 3px 3px 5px 50px; font-size: 9px;">
+                                                      <input type="button"  style="float:left;"  data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:runMapSearch"  label="Run Search" iconClass="dijitNoIcon" ></input>
+
+                                                      <input type="button"   style="float:right;" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:clearGraphics();"  label="Clear" iconClass="dijitNoIcon" ></input>
+                                                    </div>
 
 
                                                     <br>
                                                 </div>
+                                                <br><br>
+                                                <br><br>
 
-                                                <div style="width:48%;margin: 3px 3px 5px 50px; font-size: 9px;">
+                                                <div style="width:58%;margin: 3px 3px 5px 50px; font-size: 9px;">
                                                     <input type="button" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="Search" iconClass="dijitNoIcon" style="float:left;" data-dojo-attach-event="onClick:doSearch"></input>
 
                                                     <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:clearSearch"  label="Clear" iconClass="dijitNoIcon" style="float:right"></input>
