--- a/js/gis/dijit/prcmin/templates/prcmin.html
+++ b/js/gis/dijit/prcmin/templates/prcmin.html
@@ -113,6 +113,7 @@
 
 
  		</table>
+
          <table class="CSSTableGenerator"  >
 		 <tr>
 		   <td>
@@ -165,6 +166,36 @@
 
  		</table>
 
+
+         <table class="CSSTableGenerator"  >
+		 <tr>
+		   <td>
+		   				 <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebSales" data-dojo-attach-event="onClick:ebClick"  label="Sales Information" iconClass="dijitNoIcon" style="width:100%;height:25px;font-size:9px;padding:0px;margin:0px"></input>
+		   </td>
+		 </tr>
+ 	    </table>
+
+          <table data-dojo-attach-point="slsTable"  class="CSSTableGenerator" style="display:none;height:0px"  >
+				<tr>
+				   <td>Date</td>
+				   <td>Price</td>
+				   <td>Vacant?</td>
+				   <td>Qualified</td>
+				</tr>
+				<tr>
+				   <td data-dojo-attach-point="pcSLS_Date_1"></td>
+				   <td data-dojo-attach-point="pcSLS_Price_1"></td>
+				   <td data-dojo-attach-point="pcSLS_Vacant_1"></td>
+				   <td data-dojo-attach-point="pcSLS_Qual_1"></td>
+				</tr>
+				<tr>
+				   <td data-dojo-attach-point="pcSLS_Date_2"></td>
+				   <td data-dojo-attach-point="pcSLS_Price_2"></td>
+				   <td data-dojo-attach-point="pcSLS_Vacant_2"></td>
+				   <td data-dojo-attach-point="pcSLS_Qual_2"></td>
+				</tr>
+
+ 		</table>
 
 
 	</div>
