--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -206,8 +206,8 @@
 
                             <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">
 
-                                <div id="pPageSelDiv" style="visibility:visible;padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
 
+                                <div id="pPageSelDiv" style="visibility:visible;padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
                                     <div style="float:left; padding:0px;margin;0px;">page: </div>
                                     <div style="padding: 0px; float: right; padding:0px;margin;0px;">
                                         <select id="selResPage" style="font-size:11pt; width: 120px; padding:0px;margin;0px">
@@ -215,11 +215,22 @@
 
                                         </select>
                                     </div>
-
                                 </div>
+
                                 <br>
                                 <div id="pResCount" style="float:center; padding:0px;margin;0px;"> </div>
                                 <br>
+
+                                 <div id="pZmDv" style="float:left; padding:0px;margin;0px;">
+                                      <input id="btnZoomAlllIST" data-dojo-attach-point="btnZoomAlllIST" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:center" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="zoom to these records" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:zoomAllList"></input>
+
+                                     <input id="btnPrLbls" data-dojo-attach-point="btnPrLbls" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:right" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="print mailing labels" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:printMailLbls"></input>
+
+
+                                     <!-- <input id="btnZoomAll" data-dojo-attach-point="btnZoomAll" type="button" style="z-index: 900;font-size:9px;margin:0px;padding:0px;height:20px;float:right" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="zoom to all records" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:zoomAll"> </input>
+                                     -->
+                                 </div>
+                                 <br>
 
 
 
