--- a/js/gis/dijit/Help/templates/HelpDialog.html
+++ b/js/gis/dijit/Help/templates/HelpDialog.html
@@ -119,7 +119,7 @@
                   </div>
                 </div>
 
-                <div data-dojo-type="dijit/layout/ContentPane" title="About">
+              <!--  <div data-dojo-type="dijit/layout/ContentPane" title="About">
 				  <div class="htabContBG"> </div>
 
                    <div class="htabContent htabContMain">
@@ -133,6 +133,7 @@
                     </div>
                   </div>
                 </div>
+                -->
 
 
 
