--- a/js/gis/dijit/prc/templates/prc.html
+++ b/js/gis/dijit/prc/templates/prc.html
@@ -9,7 +9,7 @@
 				<td><img id="pc_zoom"  alt="zoom to parcel and view moredetails"  title="zoom to parcel"  src="img/zoom_in_1.gif" /></td>
 				<td><img id="pc_fulldet"   alt="full parcel details"  title="Open new window with full parcel details" src="img/attributes_1.gif" /></td>
 				<td><img id="pc_mindet"  alt="minimal parcel details" title="View more parcel details"  src="img/attributes_2.gif" /> </td>
-				<td><img id="pc_save"  alt="Add Parcel To Saved Results List" title="Add Parcel To Saved Results List"  src="img/SaveSearch1.gif" /></td>
+				<td><img id="pc_save" data-dojo-attach-point="pc_save" alt="Add Parcel To Saved Results List" title="Add Parcel To Saved Results List"  src="img/SaveSearch1.gif" /></td>
 				<td><img id="pc_print"  alt="Print Parcel Property Card" title="Print Parcel Property Card" src="img/Print_1.gif" /></td>
 			  </tr>
 
