--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -117,9 +117,16 @@
 
                                                     <p>Date Range:</p>
                                                     <div style="padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
+
+													    <!--
 													    <input id="tbSlDateFrom" type="text" auFromcomplete="on" data-dojo-type="dijit/form/ValidationTextBox" data-dojo-attach-point="tbSlDateFrom" data-dojo-props="name:'searchSlDateFrom',trim:true,required:true,value:'',placeholder:'Enter the text you want From search for.',class:'searchText'" style="width: 99px;float:left"></input>
 
+
 														<input id="tbSlDateTo" type="text" autocomplete="on" data-dojo-type="dijit/form/ValidationTextBox" data-dojo-attach-point="tbSlDateTo" data-dojo-props="name:'searchSlDateTo',trim:true,required:true,value:'',placeholder:'Enter the text you want to search for.',class:'searchText'" style="width: 99px;float:right"></input>
+													    -->
+													    <input id="tbSlDateFrom" type="text" data-dojo-type="dijit/form/DateTextBox"  data-dojo-attach-point="tbSlDateFrom"  style="width: 99px;float:left"></input>
+
+														<input id="tbSlDateTo" type="text" data-dojo-type="dijit/form/DateTextBox"  data-dojo-attach-point="tbSlDateTo"   style="width: 99px;float:right"></input>
 														<br>
 													</div>
 													<br>
@@ -207,7 +214,7 @@
                             <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">
 
 
-                                <div id="pPageSelDiv" style="visibility:visible;padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
+                                <div id="pPageSelDiv"   style="display:block;visibility:visible;padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
                                     <div style="float:left; padding:0px;margin;0px;">page: </div>
                                     <div style="padding: 0px; float: right; padding:0px;margin;0px;">
                                         <select id="selResPage" style="font-size:11pt; width: 120px; padding:0px;margin;0px">
@@ -221,14 +228,11 @@
                                 <div id="pResCount" style="float:center; padding:0px;margin;0px;"> </div>
                                 <br>
 
-                                 <div id="pZmDv" style="float:left; padding:0px;margin;0px;">
-                                      <input id="btnZoomAlllIST" data-dojo-attach-point="btnZoomAlllIST" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:center" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="zoom to these records" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:zoomAllList"></input>
+                                 <div id="pZmDv" style="float:center; padding:0px;margin;0px;">
+                                      <input id="btnZoomAlllIST" data-dojo-attach-point="btnZoomAll" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:left;display:block" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="zoom to these records" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:zoomAllList"></input>
 
-                                     <input id="btnPrLbls" data-dojo-attach-point="btnPrLbls" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:right" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="print mailing labels" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:printMailLbls"></input>
+                                     <input id="btnPrLbls" data-dojo-attach-point="btnPrLbls" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:right;display:block" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="print mailing labels" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:printMailLbls"></input>
 
-
-                                     <!-- <input id="btnZoomAll" data-dojo-attach-point="btnZoomAll" type="button" style="z-index: 900;font-size:9px;margin:0px;padding:0px;height:20px;float:right" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="zoom to all records" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:zoomAll"> </input>
-                                     -->
                                  </div>
                                  <br>
 
@@ -241,8 +245,6 @@
                                     <div id="pSearchResults" data-dojo-type="dijit/layout/ContentPane" style="padding:0px !important;margin:0px !important;">
 
                                         <!--<div id="pWaitDiv" style="visibility:visible"><img id="pwaitimg"  alt="Please standby while I search" title="Please Standby" src="images/ajax-loader3.gif" /></div>-->
-
-
 
                                     </div>
                                 </div>
@@ -281,11 +283,26 @@
 
 
                     <div class="ptabContent ptabContMain">
-                        <div class="ptabContent ptabContMain">
+                             <div id="pSavedZmDv" style="float:center;padding:0px;margin;0px;">
+                                      <input id="btnZoomAllSaved" data-dojo-attach-point="btnSavedZoomAll" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:left;display:none" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="zoom to these records" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:zoomAllListSaved"></input>
+
+                                     <input id="btnSavedPrLbls" data-dojo-attach-point="btnSavedPrLbls" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:right;display:none" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="print mailing labels" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:printMailLblsSaved"></input>
+
+                            </div>
+
                             <br>
-                            <div id="pSearchSaved" data-dojo-type="dijit/layout/ContentPane" style="padding:0px !important;margin:0px !important;">
-                                <p>Saved property cards</p>
-                                <br>
+                        <div class="ptabContent ptabContMain">
+
+                            <br>
+                            <div id="pSearchSaved" data-dojo-type="dijit/layout/ContentPane" style="float:center;padding:0px !important;margin:0px !important;">
+
+
+
+
+
+
+
+
                             </div>
 
                         </div>
