Parcel Search Update
The map search in the Parcel Search menu is now using the drawingtoolbar

--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -165,11 +165,18 @@
                                                     <p>Map Search Tools Are A Work In Progress</p>
 
                                                       <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:modePoint"  label="Select By Point" iconClass="dijitNoIcon" ></input>
-                                                      <br><br><br>
+                                                      <br>
+                                                      <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:modePolyline"  label="Select By Line" iconClass="dijitNoIcon" ></input>
+                                                      <br>
 
                                                       <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:modePolygon"  label="Select By Polygon" iconClass="dijitNoIcon" ></input>
                                                       <br>
 
+                                                      <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:modeFreehandLine"  label="Select By Freehand Line" iconClass="dijitNoIcon" ></input>
+                                                      <br>
+
+                                                      <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:modeFreehandPolygon"  label="Select By Freehand Polygon" iconClass="dijitNoIcon" ></input>
+                                                      <br>
 
                                                       <br><br>
 
